--- a/c1/pyproject.toml
+++ b/c1/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "dotenv>=0.9.9",
     "openai>=2.14.0",
 ]
