--- a/c1/pyproject.toml
+++ b/c1/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "anthropic>=0.75.0",
+    "asyncio>=4.0.0",
     "dotenv>=0.9.9",
     "openai>=2.14.0",
     "python-dotenv>=1.2.1",
