--- a/c2/pyproject.toml
+++ b/c2/pyproject.toml
@@ -5,5 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "dotenv>=0.9.9",
+    "fastapi>=0.128.0",
     "openai>=2.14.0",
+    "python-multipart>=0.0.21",
+    "uvicorn>=0.40.0",
 ]
