--- a/c3/pyproject.toml
+++ b/c3/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "dotenv>=0.9.9",
     "langchain>=1.2.0",
+    "langchain-anthropic>=1.3.0",
     "langchain-openai>=1.1.6",
 ]
