--- a/c3/pyproject.toml
+++ b/c3/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "dotenv>=0.9.9",
     "langchain>=1.2.0",
+    "langchain-core>=1.2.0",
     "langchain-anthropic>=1.3.0",
     "langchain-openai>=1.1.6",
 ]
